--- a/deploy/docker/config/service/group.yaml.template
+++ b/deploy/docker/config/service/group.yaml.template
@@ -24,13 +24,13 @@ redis:
 #  protocol: 3
 
 grpc:
-  address: "0.0.0.0"
+  address: "group_service"
   port: 10005
 
 # 注册本服务
 register:
   name: "group_service"
-  address: "registry"   # 注册中心地址
+  address: "consul"   # 注册中心地址
   port: 8500            # 注册中心端口
   tags: ["group", "service", "群组服务"]
 
