--- a/deploy/docker/config/service/msg.yaml.template
+++ b/deploy/docker/config/service/msg.yaml.template
@@ -17,13 +17,13 @@ redis:
 #  protocol: 3
 
 grpc:
-  address: "0.0.0.0"
+  address: "msg_service"
   port: 10000
 
 # 注册本服务
 register:
   name: "msg_service"
-  address: "registry"   # 注册中心地址
+  address: "consul"     # 注册中心地址
   port: 8500            # 注册中心端口
   tags: ["msg", "service", "消息服务"]
 
