--- a/interface/msg/config/config.yaml.template
+++ b/interface/msg/config/config.yaml.template
@@ -42,7 +42,7 @@ grpc:
 # 注册本服务
 register:
   name: "msg_bff"
-  address: "registry"   # 注册中心地址
+  address: "consul"   # 注册中心地址
   port: 8500            # 注册中心端口
   tags: ["msg", "bff", "消息服务"]
 
