--- a/.github/workflows/docker_user_interface.yml
+++ b/.github/workflows/docker_user_interface.yml
@@ -7,6 +7,7 @@ on:
        - 'main'
        - 'master'
     paths:
+      - 'pkg/cache/**.go'
       - 'pkg/config/**.go'
       - 'pkg/http/**.go'
       - 'docs/user*.*'
