--- a/deploy/docker/config/interface/gateway.yaml.template
+++ b/deploy/docker/config/interface/gateway.yaml.template
@@ -5,7 +5,7 @@ log:
   format: "console" # console、json
 
 http:
-  address: "0.0.0.0"
+  address: "gateway"
   port: 8080
 
 grpc:
@@ -15,7 +15,7 @@ grpc:
 # 注册本服务
 register:
   name: "gateway"
-  address: "registry"   # 注册中心地址
+  address: "consul"   # 注册中心地址
   port: 8500            # 注册中心端口
   tags: ["gateway", "api", "网关服务"]
 
