--- a/deploy/docker/config/interface/relation.yaml.template
+++ b/deploy/docker/config/interface/relation.yaml.template
@@ -29,7 +29,7 @@ dtm:
   port: 36790
 
 http:
-  address: "0.0.0.0"
+  address: "relation_bff"
   port: 8082
 
 grpc:
@@ -39,7 +39,7 @@ grpc:
 # 注册本服务
 register:
   name: "relation_bff"
-  address: "registry"   # 注册中心地址
+  address: "consul"   # 注册中心地址
   port: 8500            # 注册中心端口
   tags: ["relation", "bff", "关系服务"]
 
