--- a/deploy/docker/config/interface/storage.yaml.template
+++ b/deploy/docker/config/interface/storage.yaml.template
@@ -10,7 +10,7 @@ mysql:
   dsn: "root:Hitosea@123..@tcp(mysql:3306)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
 
 http:
-  address: "0.0.0.0"
+  address: "storage_bff"
   port: 8085
 
 oss:
@@ -32,7 +32,7 @@ redis:
 # 注册本服务
 register:
   name: "storage_bff"
-  address: "registry"   # 注册中心地址
+  address: "consul"   # 注册中心地址
   port: 8500            # 注册中心端口
   tags: ["storage", "bff"]
 
