--- a/deploy/docker/config/service/storage.yaml.template
+++ b/deploy/docker/config/service/storage.yaml.template
@@ -10,13 +10,13 @@ mysql:
   dsn: "root:Hitosea@123..@tcp(mysql:3306)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
 
 grpc:
-  address: "0.0.0.0"
+  address: "storage_service"
   port: 10006
 
 # 注册本服务
 register:
   name: "storage_service"
-  address: "registry"   # 注册中心地址
+  address: "consul"   # 注册中心地址
   port: 8500            # 注册中心端口
   tags: ["storage", "service","存储服务"]
 
