feat: 为所有服务添加consul配置中心

--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -72,7 +72,7 @@ services:
       - '36789:36789'
       - '36790:36790'
   consul:
-    image: consul:latest
+    image: hub.hitosea.com/cossim/consul:latest
     container_name: cossim_consul
     volumes:
       - ./data/var/lib/consul:/consul/data
