fix:优化用户bff启动时加载环境变量

--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -158,6 +158,7 @@ services:
     volumes:
       - ./config/interface/user.yaml:/config/config.yaml
       - ./config/pgp:/.cache
+      - ./config/common/SourceHanSansSC-Medium.ttf:/.cache
     depends_on:
       - redis
       - relation_service
