--- a/interface/storage/config/config.yaml.template
+++ b/interface/storage/config/config.yaml.template
@@ -1,3 +1,12 @@
+system:
+  environment: "dev" # dev、prod
+  avatar_file_path: "/.cache"
+  avatar_file_path_dev:
+  gateway_address: "43.229.28.107"
+  gateway_port: 8080
+  gateway_address_dev: "127.0.0.1"
+  gateway_port_dev: 8080
+
 log:
   stdout: true
   v: -1
