fix:优化项目启动时中间件校验逻辑

--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -191,7 +191,7 @@ services:
       CONSUL_HTTP_TOKEN:
     restart: on-failure
   storage_bff:
-    container_name: cossim_storgae_bff
+    container_name: cossim_storage_bff
     image: hub.hitosea.com/cossim/storage-interface
     command:
       - "--discover"
