--- a/interface/storage/config/config.yaml.template
+++ b/interface/storage/config/config.yaml.template
@@ -1,6 +1,6 @@
 system:
   environment: "dev" # dev、prod
-  avatar_file_path: "/.cache"
+  avatar_file_path: "/.cache/"
   avatar_file_path_dev:
   gateway_address: "43.229.28.107"
   gateway_port: 8080
