fix:优化relation服务的grpc结构

--- a/.github/workflows/docker_group_interface.yml
+++ b/.github/workflows/docker_group_interface.yml
@@ -9,8 +9,8 @@ on:
     paths:
       - 'pkg/config/**.go'
       - 'pkg/http/**.go'
-      - 'docs/group*.*'
-      - 'interface/group/**.go'
+      - 'docs/group_relation*.*'
+      - 'interface/group_relation/**.go'
 jobs:
   build_group_interface:
     runs-on: ubuntu-latest
