--- a/.github/workflows/docker_user_service.yml
+++ b/.github/workflows/docker_user_service.yml
@@ -8,7 +8,7 @@ on:
        - 'master'
     paths:
       - 'pkg/config/**.go'
-      - 'service/user/**.go'
+      - 'service/user_relation/**.go'
 jobs:
   build_user_service:
     runs-on: ubuntu-latest
