feat(live_group): 添加群聊通话接受拒绝和优化用户通话

--- a/interface/live/config/config.yaml.template
+++ b/interface/live/config/config.yaml.template
@@ -53,3 +53,7 @@ discovers:
     address: "relation_service"
     port: 10001
     direct: true
+  group:
+    name: "group_service"
+    address: "group_service"
+    port: "10005"
