feat(manager): 添加manager，修改group_bff使用manager启动

--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -109,6 +109,7 @@ services:
       - "--config"
       - "/config/config.yaml"
       - "--discover"
+      - "--register"
       - "--remote-config"
       - "--config-center-addr"
       - "consul:8500"
@@ -133,6 +134,7 @@ services:
       - "--config"
       - "/config/config.yaml"
       - "--discover"
+      - "--register"
       - "--remote-config"
       - "--config-center-addr"
       - "consul:8500"
@@ -152,6 +154,7 @@ services:
     - "--config"
     - "/config/config.yaml"
     - "--discover"
+    - "--register"
     - "--remote-config"
     - "--config-center-addr"
     - "consul:8500"
@@ -173,6 +176,7 @@ services:
       - "--config"
       - "/config/config.yaml"
       - "--discover"
+      - "--register"
       - "--remote-config"
       - "--config-center-addr"
       - "consul:8500"
@@ -195,6 +199,7 @@ services:
     image: hub.hitosea.com/cossim/storage-interface
     command:
       - "--discover"
+      - "--register"
       - "--remote-config"
       - "--config-center-addr"
       - "consul:8500"
@@ -214,6 +219,7 @@ services:
     image: hub.hitosea.com/cossim/live-interface
     command:
       - "--discover"
+      - "--register"
       - "--remote-config"
       - "--config-center-addr"
       - "consul:8500"
@@ -234,6 +240,7 @@ services:
       - "--config"
       - "/config/config.yaml"
       - "--discover"
+      - "--register"
       - "--remote-config"
       - "--config-center-addr"
       - "consul:8500"
@@ -252,6 +259,7 @@ services:
       - "--config"
       - "/config/config.yaml"
       - "--discover"
+      - "--register"
       - "--remote-config"
       - "--config-center-addr"
       - "consul:8500"
@@ -270,6 +278,7 @@ services:
       - "--config"
       - "/config/config.yaml"
       - "--discover"
+      - "--register"
       - "--remote-config"
       - "--config-center-addr"
       - "consul:8500"
@@ -288,6 +297,7 @@ services:
       - "--config"
       - "/config/config.yaml"
       - "--discover"
+      - "--register"
       - "--remote-config"
       - "--config-center-addr"
       - "consul:8500"
@@ -306,6 +316,7 @@ services:
       - "--config"
       - "/config/config.yaml"
       - "--discover"
+      - "--register"
       - "--remote-config"
       - "--config-center-addr"
       - "consul:8500"
