--- a/interface/live/config/config.yaml.template
+++ b/interface/live/config/config.yaml.template
@@ -37,23 +37,44 @@ http:
 
 # 注册本服务
 register:
+  # 服务注册名称
   name: "live_bff"
-  address: "consul"   # 注册中心地址
-  port: 8500            # 注册中心端口
+
+  # 注册中心地址
+  address: "consul"
+
+  # 注册中心端口
+  port: 8500
+
   tags: ["live", "bff", "用户通话服务"]
+
+  # 启用服务发现 默认为true
+  #discover: true
+  # 启用服务注册 默认为true
+  #register: true
 
 discovers:
   user:
     name: "user_service"
     address: "user_service"
     port: 10002
-    direct: true
+
+    # 不使用服务发现，使用addr直接连接
+    # 默认为false
+    #direct: false
   relation:
     name: "relation_service"
     address: "relation_service"
     port: 10001
-    direct: true
+
+    # 不使用服务发现，使用addr直接连接
+    # 默认为false
+    #direct: false
   group:
     name: "group_service"
     address: "group_service"
     port: "10005"
+
+    # 不使用服务发现，使用addr直接连接
+    # 默认为false
+    #direct: false
