--- a/interface/relation/config/config.yaml.template
+++ b/interface/relation/config/config.yaml.template
@@ -38,25 +38,42 @@ grpc:
 
 # 注册本服务
 register:
-  name: "relation_bff"
-  address: "registry"   # 注册中心地址
-  port: 8500            # 注册中心端口
+  # 服务注册名称
+  name: "live_bff"
+
+  # 注册中心地址
+  address: "consul"
+
+  # 注册中心端口
+  port: 8500
   tags: ["relation", "bff", "关系服务"]
+
+  # 启用服务发现 默认为true
+  #discover: true
+  # 启用服务注册 默认为true
+  #register: true
 
 discovers:
   user:
     name: "user_service"
     address: "user_service"
     port: "10002"
+
+    # 不使用服务发现，使用addr直接连接
+    # 默认为false
+    #direct: false
   relation:
     name: "relation_service"
     address: "relation_service"
     port: "10001"
+    #direct: false
   msg:
     name: "msg_service"
     address: "msg_service"
     port: "10000"
+    #direct: false
   group:
     name: "group_service"
     address: "group_service"
     port: "10005"
+    #direct: false
