feat(svcs): 所有grpc服务使用manager管理

--- a/service/user/config/config.yaml.template
+++ b/service/user/config/config.yaml.template
@@ -22,8 +22,18 @@ grpc:
 
 # 注册本服务
 register:
+  # 服务注册名称
   name: "user_service"
-  address: "registry"   # 注册中心地址
-  port: 8500            # 注册中心端口
+
+  # 注册中心地址
+  address: "consul"
+
+  # 注册中心端口
+  port: 8500
+
   tags: ["user", "service", "用户服务"]
 
+  # 启用服务发现 默认为true
+  #discover: true
+  # 启用服务注册 默认为true
+  #register: true
