--- a/service/relation/config/config.yaml.template
+++ b/service/relation/config/config.yaml.template
@@ -29,7 +29,18 @@ grpc:
 
 # 注册本服务
 register:
+  # 服务注册名称
   name: "relation_service"
-  address: "registry"   # 注册中心地址
-  port: 8500            # 注册中心端口
+
+  # 注册中心地址
+  address: "consul"
+
+  # 注册中心端口
+  port: 8500
+
   tags: ["relation", "service", "关系服务"]
+
+  # 启用服务发现 默认为true
+  #discover: true
+  # 启用服务注册 默认为true
+  #register: true
