--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -127,6 +127,32 @@ services:
     environment:
       CONSUL_HTTP_TOKEN:
     restart: on-failure
+  admin_bff:
+    container_name: cossim_admin_bff
+    image: hub.hitosea.com/cossim/admin-admin
+    command:
+      - "--config"
+      - "/config/config.yaml"
+      - "--discover"
+      - "--register"
+      - "--remote-config"
+      - "--config-center-addr"
+      - "consul:8500"
+    volumes:
+      - ./config/interface/admin.yaml:/config/config.yaml
+      - ./config/pgp:/.cache
+      - ./config/common/SourceHanSansSC-Medium.ttf:/.cache/SourceHanSansSC-Medium.ttf
+    depends_on:
+      - dtm
+      - redis
+      - rabbitmq
+      - group_service
+      - relation_service
+      - user_service
+      - msg_service
+    environment:
+      CONSUL_HTTP_TOKEN:
+    restart: on-failure
   relation_bff:
     container_name: cossim_relation_bff
     image: hub.hitosea.com/cossim/relation-interface
