feat:添加admin服务工作流

--- a/.github/workflows/docker_admin.yml
+++ b/.github/workflows/docker_admin.yml
@@ -12,7 +12,7 @@ on:
       - 'docs/admin*.*'
       - 'admin/**.go'
 jobs:
-  build_group_interface:
+  build_admin:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
