feat(storage):添加公开存储桶 fix(user_bff):调整注册时上传头像桶

--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -189,6 +189,7 @@ services:
       - ./config/pgp:/.cache
       - ./config/common/SourceHanSansSC-Medium.ttf:/.cache/SourceHanSansSC-Medium.ttf
     depends_on:
+      - dtm
       - redis
       - relation_service
       - user_service
