fix(live): 修复拒绝群聊通话参数验证失败

--- a/interface/live/config/config.yaml.template
+++ b/interface/live/config/config.yaml.template
@@ -73,7 +73,7 @@ discovers:
   group:
     name: "group_service"
     address: "group_service"
-    port: "10005"
+    port: 10005
 
     # 不使用服务发现，使用addr直接连接
     # 默认为false
