--- a/interface/user/config/config.yaml.template
+++ b/interface/user/config/config.yaml.template
@@ -1,5 +1,6 @@
 system:
   environment: "dev" # dev、prod
+  ssl: false # 是否启用ssl true的话不会使用port
   avatar_file_path: "/.cache/"
   avatar_file_path_dev:
   gateway_address: "43.229.28.107"
