--- a/service/storage/config/config.yaml.template
+++ b/service/storage/config/config.yaml.template
@@ -6,8 +6,10 @@ log:
 
 mysql:
   address: "mysql"
-  port: 3306
-  dsn: "root:Hitosea@123..@tcp(mysql:3306)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
+  port: 33066
+  username: "root"
+  password: "888888"
+  database: "coss"
 
 grpc:
   address: "storage_service"
