--- a/service/msg/config/config.yaml.template
+++ b/service/msg/config/config.yaml.template
@@ -10,6 +10,14 @@ mysql:
   username: "root"
   password: "888888"
   database: "coss"
+  opts:
+    allowNativePasswords: "true"
+    timeout: "800ms"
+    readTimeout: "200ms"
+    writeTimeout: "800ms"
+    parseTime: "true"
+    loc: "Local"
+    charset: "utf8mb4"
 
 redis:
   proto: "tcp"
