--- a/admin/config/config.yaml
+++ b/admin/config/config.yaml
@@ -58,7 +58,7 @@ message_queue:
   username: "root"
   password: "Hitosea@123.."
   address: "rabbitmq"
-  port: "5672"
+  port: 5672
 
 oss:
   minio:
@@ -76,15 +76,15 @@ discovers:
   user:
     name: "user_service"
     address: "user_service"
-    port: "10004"
+    port: 10004
     direct: true
   relation:
     name: "relation_service"
     address: "relation_service"
-    port: "10002"
+    port: 10002
     direct: true
   msg:
     name: "msg_service"
     address: "msg_service"
-    port: "10001"
+    port: 10001
     direct: true
