ci(action): 更新工作流匹配条件

--- a/.github/workflows/docker_gateway.yml
+++ b/.github/workflows/docker_gateway.yml
@@ -7,7 +7,7 @@ on:
       - 'main'
       - 'master'
     paths:
-      - 'pkg/config/**.go'
+      - 'pkg/**/*.go'
       - 'interface/gateway/**.go'
 jobs:
   build_gateway:
