--- a/.github/workflows/docker_user_interface.yml
+++ b/.github/workflows/docker_user_interface.yml
@@ -7,9 +7,7 @@ on:
        - 'main'
        - 'master'
     paths:
-      - 'pkg/cache/**.go'
-      - 'pkg/config/**.go'
-      - 'pkg/http/**.go'
+      - 'pkg/**/*.go'
       - 'docs/user*.*'
       - 'interface/user/**.go'
 jobs:
